; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/vt/extr_vt_core.c_vt_update_kbd_leds.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/vt/extr_vt_core.c_vt_update_kbd_leds.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.vt_window = type { i32 }

@LED_MASK = common dso_local global i32 0, align 4
@KDSETLED = common dso_local global i32 0, align 4
@ENOIOCTL = common dso_local global i32 0, align 4
@ENODEV = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.vt_window*, i32*)* @vt_update_kbd_leds to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @vt_update_kbd_leds(%struct.vt_window* %0, i32* %1) #0 {
  %3 = alloca %struct.vt_window*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store %struct.vt_window* %0, %struct.vt_window** %3, align 8
  store i32* %1, i32** %4, align 8
  %7 = load %struct.vt_window*, %struct.vt_window** %3, align 8
  %8 = getelementptr inbounds %struct.vt_window, %struct.vt_window* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  %10 = load i32, i32* @LED_MASK, align 4
  %11 = and i32 %9, %10
  store i32 %11, i32* %5, align 4
  %12 = load i32*, i32** %4, align 8
  %13 = load i32, i32* @KDSETLED, align 4
  %14 = ptrtoint i32* %5 to i32
  %15 = call i32 @kbdd_ioctl(i32* %12, i32 %13, i32 %14)
  store i32 %15, i32* %6, align 4
  %16 = load i32, i32* %6, align 4
  %17 = load i32, i32* @ENOIOCTL, align 4
  %18 = icmp eq i32 %16, %17
  br i1 %18, label %19, label %21

19:                                               ; preds = %2
  %20 = load i32, i32* @ENODEV, align 4
  store i32 %20, i32* %6, align 4
  br label %21

21:                                               ; preds = %19, %2
  %22 = load i32, i32* %6, align 4
  ret i32 %22
}

declare dso_local i32 @kbdd_ioctl(i32*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
